[tool.poetry]
name = "clickexample"
version = "0.1.0"
description = ""
authors = ["Christian Hüser <c_hueser@web.de>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
